[package]
name = "neuro-brute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base64 = "0.21.2"
num-format = "0.4.4"
simdutf8 = "0.1.4"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
debug = true
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
